pushing in case a student touches this code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <body>
         <header>Chay's Giphy Page</header>
         <section id="button-field"></section>
+        <section id="search">
+            <form>
+                <input type="text" id="text">
+                <input type="submit" id="submit">
+            </form>
+        </section>
         <section id="giphyField"></section>
 
     </body>
