code is working but first click doesn't do anything everytime buttons get reloaded

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section id="search">
             <form>
                 <input type="text" id="text">
-                <input type="submit" id="submit">
+                <input type="submit" id="submit" value="Add Gifs">
             </form>
         </section>
         <section id="giphyField"></section>
