js is working, now I just need to pretty up the page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section id="button-field"></section>
         <section id="search">
             <form>
-                <input type="text" id="text">
+                <input type="text" id="textBox">
                 <input type="submit" id="submit" value="Add Gifs">
             </form>
         </section>
