--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Chay's Giphies</title>
-        <meta charset="UTF-8">
-        <link href="./assets/css/reset.css" rel="spreadsheet" type="text/css">
-        <link href="./assets/css/style.css" rel="spreadsheet" type="text/css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="./assets/javascript/giphy.js" rel="spreadsheet/javascript"></script>
-    </head>
-    <body>
-        <header>Chay's Giphy Page</header>
-        <section id="button-field"></section>
-        <section id="search">
-            <form>
-                <input type="text" id="textBox">
-                <input type="submit" id="submit" value="Add Gifs">
-            </form>
-        </section>
-        <section id="giphyField"></section>
 
-    </body>
+<head>
+    <title>Chay's Giphies</title>
+    <meta charset="UTF-8">
+    <link href="./assets/css/reset.css" rel="stylesheet" type="text/css">
+    <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./assets/javascript/giphy.js" rel="spreadsheet/javascript"></script>
+</head>
+
+<body>
+    <header>Chay's Giphy Page</header>
+    <div class="everything">
+        <section id="button-field"></section>
+        <form id="search">
+            <input type="text" id="textBox">
+            <input type="submit" id="submit" value="Add Gifs">
+        </form>
+        <section id="giphyField"></section>
+    </div>
+
+</body>
+
 </html>
